src/test/ui/nll/normalization-bounds-error.stderr
error[E0495]: cannot infer an appropriate lifetime for lifetime parameter `'d` due to conflicting requirements
  --> $DIR/normalization-bounds-error.rs:12:4
   |
LL | fn visit_seq<'d, 'a: 'd>() -> <&'a () as Visitor<'d>>::Value {}
   |    ^^^^^^^^^
   |
note: first, the lifetime cannot outlive the lifetime `'d` as defined here...
  --> $DIR/normalization-bounds-error.rs:12:14
   |
LL | fn visit_seq<'d, 'a: 'd>() -> <&'a () as Visitor<'d>>::Value {}
   |              ^^
note: ...but the lifetime must also be valid for the lifetime `'a` as defined here...
  --> $DIR/normalization-bounds-error.rs:12:18
   |
LL | fn visit_seq<'d, 'a: 'd>() -> <&'a () as Visitor<'d>>::Value {}
   |                  ^^
note: ...so that the types are compatible
  --> $DIR/normalization-bounds-error.rs:12:4
   |
LL | fn visit_seq<'d, 'a: 'd>() -> <&'a () as Visitor<'d>>::Value {}
   |    ^^^^^^^^^
   = note: expected `Visitor<'d>`
              found `Visitor<'_>`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0495`.
